[gd_scene load_steps=3 format=2]

[ext_resource path="res://style/type/type_bold_normal.tres" type="DynamicFont" id=1]
[ext_resource path="res://scenes/CSVImport.gd" type="Script" id=2]

[node name="CSVImport" type="WindowDialog"]
visible = true
margin_left = 9.0
margin_top = 9.0
margin_right = 802.0
margin_bottom = 398.0
window_title = "CSV Data Import"
script = ExtResource( 2 )

[node name="M" type="MarginContainer" parent="."]
margin_right = 700.0
margin_bottom = 354.0
custom_constants/margin_right = 9
custom_constants/margin_top = 9
custom_constants/margin_left = 9
custom_constants/margin_bottom = 9

[node name="VB" type="VBoxContainer" parent="M"]
margin_left = 9.0
margin_top = 9.0
margin_right = 691.0
margin_bottom = 355.0
custom_constants/separation = 10

[node name="HB" type="HBoxContainer" parent="M/VB"]
modulate = Color( 1, 1, 0, 1 )
margin_right = 682.0
margin_bottom = 20.0
custom_constants/separation = 20

[node name="Path" type="Label" parent="M/VB/HB"]
margin_right = 589.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "path"

[node name="ColRow" type="Label" parent="M/VB/HB"]
margin_left = 609.0
margin_right = 682.0
margin_bottom = 20.0
text = "cols x rows"

[node name="VSpacer1" type="Control" parent="M/VB"]
margin_top = 30.0
margin_right = 682.0
margin_bottom = 35.0
rect_min_size = Vector2( 0, 5 )

[node name="IgnoreFirstRow" type="CheckBox" parent="M/VB"]
margin_top = 45.0
margin_right = 682.0
margin_bottom = 73.0
pressed = true
text = "Ignore first row (column headings) ?"

[node name="VSpacer2" type="Control" parent="M/VB"]
margin_top = 83.0
margin_right = 682.0
margin_bottom = 88.0
rect_min_size = Vector2( 0, 5 )

[node name="Label" type="Label" parent="M/VB"]
modulate = Color( 0.227451, 0.788235, 0, 1 )
margin_top = 98.0
margin_right = 682.0
margin_bottom = 118.0
custom_fonts/font = ExtResource( 1 )
text = "Column Assignments"

[node name="Grid" type="GridContainer" parent="M/VB"]
margin_top = 128.0
margin_right = 682.0
margin_bottom = 128.0
custom_constants/vseparation = 10
custom_constants/hseparation = 20
columns = 4

[node name="VSpacer3" type="Control" parent="M/VB"]
margin_top = 138.0
margin_right = 682.0
margin_bottom = 143.0
rect_min_size = Vector2( 0, 5 )

[node name="Label2" type="Label" parent="M/VB"]
modulate = Color( 0.227451, 0.788235, 0, 1 )
margin_top = 153.0
margin_right = 682.0
margin_bottom = 173.0
custom_fonts/font = ExtResource( 1 )
text = "Preview"

[node name="SC" type="ScrollContainer" parent="M/VB"]
margin_top = 183.0
margin_right = 682.0
margin_bottom = 263.0
rect_min_size = Vector2( 0, 80 )

[node name="Grid" type="GridContainer" parent="M/VB/SC"]
custom_constants/hseparation = 20
columns = 8

[node name="Warning" type="Label" parent="M/VB"]
modulate = Color( 1, 0.305882, 0, 1 )
margin_top = 273.0
margin_right = 682.0
margin_bottom = 293.0
text = "WARNING: delete your .csv password data file after this step because it is not secure!"

[node name="VSpacer4" type="Control" parent="M/VB"]
margin_top = 303.0
margin_right = 682.0
margin_bottom = 308.0
rect_min_size = Vector2( 0, 5 )

[node name="OK" type="Button" parent="M/VB"]
margin_top = 318.0
margin_right = 682.0
margin_bottom = 346.0
text = "OK"

[connection signal="pressed" from="M/VB/IgnoreFirstRow" to="." method="_on_IgnoreFirstRow_pressed"]
[connection signal="pressed" from="M/VB/OK" to="." method="_on_OK_pressed"]
